[gd_scene load_steps=21 format=3 uid="uid://cog7gxnayd6ow"]

[ext_resource type="Texture2D" uid="uid://76nq4nxiboq1" path="res://Assets/Sprites/Enemies/Slime.png" id="1_xaayx"]
[ext_resource type="Script" path="res://Scripts/slime.gd" id="1_xt1re"]

[sub_resource type="AtlasTexture" id="AtlasTexture_goa4i"]
atlas = ExtResource("1_xaayx")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lbtx"]
atlas = ExtResource("1_xaayx")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfhb1"]
atlas = ExtResource("1_xaayx")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioxxu"]
atlas = ExtResource("1_xaayx")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvqp0"]
atlas = ExtResource("1_xaayx")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61106"]
atlas = ExtResource("1_xaayx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_baofr"]
atlas = ExtResource("1_xaayx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy43y"]
atlas = ExtResource("1_xaayx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiidg"]
atlas = ExtResource("1_xaayx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmd5l"]
atlas = ExtResource("1_xaayx")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx0rk"]
atlas = ExtResource("1_xaayx")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hfqx"]
atlas = ExtResource("1_xaayx")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii6x7"]
atlas = ExtResource("1_xaayx")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jah2x"]
atlas = ExtResource("1_xaayx")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwdvu"]
atlas = ExtResource("1_xaayx")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_p3jke"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_goa4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lbtx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfhb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioxxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvqp0")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61106")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_baofr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy43y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiidg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmd5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx0rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hfqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii6x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jah2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwdvu")
}],
"loop": true,
"name": &"move",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rw0hg"]
radius = 4.0
height = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cncvu"]
radius = 57.0351

[node name="Slime" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_xt1re")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p3jke")
animation = &"death"
autoplay = "idle"
offset = Vector2(0, -5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_rw0hg")

[node name="Detection_Area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_Area"]
z_index = 1
shape = SubResource("CircleShape2D_cncvu")

[node name="DamageCooldown" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0.807819, 0, 0.02829, 1)
offset_left = -10.0
offset_top = 4.0
offset_right = 180.0
offset_bottom = 31.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[connection signal="body_entered" from="Detection_Area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Detection_Area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_damage_cooldown_timeout"]
